<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="7dp"
    android:background="@color/bckg_color">

    <TextView
        android:id="@+id/tvStorageSelection"
        android:layout_width="match_parent"
        android:background="@color/header_color"
        android:layout_height="wrap_content"
        android:text="@string/choose_a_storage"
        android:textSize="22sp"
        android:paddingTop="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <Spinner
        android:id="@+id/spStorageDel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@id/tvStorageSelection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/tvDeleteNote"
        android:layout_width="match_parent"
        android:background="@color/header_color"
        android:layout_height="wrap_content"
        android:text="@string/choose_to_delete"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@id/spStorageDel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/spNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvDeleteNote"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:onClick="onDeleteClick"
        android:backgroundTint="@color/even_darker_color"
        app:layout_constraintTop_toBottomOf="@id/spNotes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"/>
    <Button
        android:id="@+id/btnBackToMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Back to main"
        android:onClick="onBackToMainClick"
        android:backgroundTint="@color/darker_color"
        app:layout_constraintTop_toBottomOf="@id/btnDelete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
